--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -30,11 +30,9 @@
                     <li class="divider"></li>
                     <li><a href="#">MC</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">DJ</a></li>
+                    <li><a href="#">Performers/Artistes</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Hair Styling</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Make up</a></li>
+                    <li><a href="#">Fashion</a></li>
                     <li class="divider"></li>
                     <li><a href="#">Phone &amp; Laptop Repairs</a></li>
                 </ul>
@@ -53,9 +51,8 @@
                     <li><a href="#">Ushering</a></li>
                     <li><a href="#">Gardening</a></li>
                     <li><a href="#">MC</a></li>
-                    <li><a href="#">DJ</a></li>
-                    <li><a href="#">Hair Styling</a></li>
-                    <li><a href="#">Make up</a></li>
+                    <li><a href="#">Performers/Artistes</a></li>
+                    <li><a href="#">Fashion</a></li>
                     <li><a href="#">Phone &amp; Laptop Repairs</a></li>
                 </ul>
                 <ul class="hide-on-med-and-down right">
