--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,9 +31,180 @@
             <li>
                 <img class="slides" src="/img/slide5.jpg" alt="Slide 5">
                 <div class="caption center-align">
-                    <a class="ajaxLink btn waves-effect waves-light view-more" href="#target" data-href="/partials/bedroom-furniture.html">See More Furniture</a>
+                    <a class="btn waves-effect waves-light view-more" href="#target" data-href="/partials/bedroom-furniture.html">See More Furniture</a>
                 </div>
             </li>				
         </ul>
     </div>
+    <div>
+        <h5 class="sub-header">Latest Products</h5>
+        <div class="card-container row">
+            <div class="card sticky-action card-item hoverable col s12  l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/img/slide4.jpg" alt="">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator">MacBook Pro<i class="mdi mdi-dots-vertical tooltipped option-icon right" data-tooltip="View Info"></i></span>
+                </div>
+                <div class="card-action">
+                    <p class="price"><span class="mdi mdi-currency-ngn">25,000</span></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title">MacBook Pro<i class="mdi mdi-close close-card right"></i></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab.</p>
+                    <p>Sold By: Onwuka Zubis</p>
+                    <p>Contact: 09026425337</p>
+                </div>
+            </div>
+            <div class="card sticky-action card-item hoverable col s12  l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/img/slide4.jpg" alt="">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator">MacBook Pro<i class="mdi mdi-dots-vertical tooltipped option-icon right" data-tooltip="View Info"></i></span>
+                </div>
+                <div class="card-action">
+                    <p class="price"><span class="mdi mdi-currency-ngn">25,000</span></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title">MacBook Pro<i class="mdi mdi-close close-card right"></i></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab.</p>
+                    <p>Sold By: Onwuka Zubis</p>
+                    <p>Contact: 09026425337</p>
+                </div>
+            </div>
+            <div class="card sticky-action card-item hoverable col s12  l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/img/slide4.jpg" alt="">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator">MacBook Pro<i class="mdi mdi-dots-vertical tooltipped option-icon right" data-tooltip="View Info"></i></span>
+                </div>
+                <div class="card-action">
+                    <p class="price"><span class="mdi mdi-currency-ngn">25,000</span></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title">MacBook Pro<i class="mdi mdi-close close-card right"></i></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab.</p>
+                    <p>Sold By: Onwuka Zubis</p>
+                    <p>Contact: 09026425337</p>
+                </div>
+            </div>
+            <div class="card sticky-action card-item hoverable col s12  l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/img/slide4.jpg" alt="">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator">MacBook Pro<i class="mdi mdi-dots-vertical tooltipped option-icon right" data-tooltip="View Info"></i></span>
+                </div>
+                <div class="card-action">
+                    <p class="price"><span class="mdi mdi-currency-ngn">25,000</span></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title">MacBook Pro<i class="mdi mdi-close close-card right"></i></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab.</p>
+                    <p>Sold By: Onwuka Zubis</p>
+                    <p>Contact: 09026425337</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-container row">
+            <div class="card sticky-action card-item hoverable col s12  l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/img/slide4.jpg" alt="">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator">MacBook Pro<i class="mdi mdi-dots-vertical tooltipped option-icon right" data-tooltip="View Info"></i></span>
+                </div>
+                <div class="card-action">
+                    <p class="price"><span class="mdi mdi-currency-ngn">25,000</span></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title">MacBook Pro<i class="mdi mdi-close close-card right"></i></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab.</p>
+                    <p>Sold By: Onwuka Zubis</p>
+                    <p>Contact: 09026425337</p>
+                </div>
+            </div>
+            <div class="card sticky-action card-item hoverable col s12  l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/img/slide4.jpg" alt="">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator">MacBook Pro<i class="mdi mdi-dots-vertical tooltipped option-icon right" data-tooltip="View Info"></i></span>
+                </div>
+                <div class="card-action">
+                    <p class="price"><span class="mdi mdi-currency-ngn">25,000</span></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title">MacBook Pro<i class="mdi mdi-close close-card right"></i></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab.</p>
+                    <p>Sold By: Onwuka Zubis</p>
+                    <p>Contact: 09026425337</p>
+                </div>
+            </div>
+            <div class="card sticky-action card-item hoverable col s12  l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/img/slide4.jpg" alt="">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator">MacBook Pro<i class="mdi mdi-dots-vertical tooltipped option-icon right" data-tooltip="View Info"></i></span>
+                </div>
+                <div class="card-action">
+                    <p class="price"><span class="mdi mdi-currency-ngn">25,000</span></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title">MacBook Pro<i class="mdi mdi-close close-card right"></i></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab.</p>
+                    <p>Sold By: Onwuka Zubis</p>
+                    <p>Contact: 09026425337</p>
+                </div>
+            </div>
+            <div class="card sticky-action card-item hoverable col s12  l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/img/slide4.jpg" alt="">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator">MacBook Pro<i class="mdi mdi-dots-vertical tooltipped option-icon right" data-tooltip="View Info"></i></span>
+                </div>
+                <div class="card-action">
+                    <p class="price"><span class="mdi mdi-currency-ngn">25,000</span></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title">MacBook Pro<i class="mdi mdi-close close-card right"></i></span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab.</p>
+                    <p>Sold By: Onwuka Zubis</p>
+                    <p>Contact: 09026425337</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="parallax-container valign-wrapper">
+		<div class="section no-pad-bot">
+			<div class="container">
+				<div class="row center">
+					<h5 class="header col s12 light parallax-header">Your favourite collection of shoes in several different colours and sizes.</h5>
+				</div>
+			</div>
+		</div>
+		<div class="parallax"><img class="responsive-img" src="img/slide5.jpg" alt="Unsplashed background img 2"></div>
+	</div>
+    <div id="about">
+        <h5 class="sub-header">About Zubis Mart</h5>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime necessitatibus laboriosam quasi debitis doloribus repudiandae mollitia soluta fuga qui, eius delectus, quaerat cupiditate! Veritatis illo accusantium corporis recusandae id ipsam voluptas nobis possimus eius quia. A eos architecto perferendis consequatur laudantium quisquam, quos earum voluptate rerum tenetur accusantium rem assumenda!</p>
+    </div>
+    <div class="parallax-container valign-wrapper">
+		<div class="section no-pad-bot">
+			<div class="container">
+				<div class="row center">
+					<h5 class="header col s12 light parallax-header">Your favourite collection of shoes in several different colours and sizes.</h5>
+				</div>
+			</div>
+		</div>
+		<div class="parallax"><img class="responsive-img" src="img/slide2.jpg" alt="Unsplashed background img 2"></div>
+	</div>
+    <div class="fixed-action-btn">
+        <a href="#page-top" class="z-depth-4 btn-floating fab" id="top"><i id="top-arrow" class="mdi mdi-chevron-up"></i></a>
+    </div>
 </main>
+{{> footer}}
