--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<header>
+<header id="page-top">
     <div class="bavbar-fixed">
         <nav>
             <div class="nav-wrapper container">
@@ -56,11 +56,12 @@
                     <li><a href="#">Phone &amp; Laptop Repairs</a></li>
                 </ul>
                 <ul class="hide-on-med-and-down right">
-                    <li class="active"><a href="#"><i class="mdi mdi-home left"></i>Home</a></li>
+                    {{!-- <li class="active"><a href="#"><i class="mdi mdi-home left"></i>Home</a></li> --}}
                     <li><a href="#!" class="dropdown-trigger" data-target="store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
                     <li><a href="#!" class="dropdown-trigger" data-target="services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
                     <li><a href="#"><i class="mdi mdi-information-variant left"></i>About</a></li>
                     <li><a href="#"><i class="mdi mdi-phone left"></i>Contact</a></li>
+                    <li><a href="#"><i class="mdi mdi-account-plus left"></i>Register</a></li>
                 </ul>
             </div>
         </nav>
@@ -70,6 +71,7 @@
             <li><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
             <li><a href="#"><i class="mdi mdi-information-variant left"></i>About</a></li>
             <li><a href="#"><i class="mdi mdi-phone left"></i>Contact</a></li>
+            <li><a href="#"><i class="mdi mdi-account-plus left"></i>Register</a></li>
         </ul>
     </div>
 </header>
