Added Signup Form

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col s12 center">
-                <h5>Connect with Us!</h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Wanna Connect?</h5>
+                <p><a href="#">Contact Us!</a></p>
                 <ul id="footerLink">
                     <li class="footerLinks"><a href="#!"><i class="mdi mdi-facebook"></i></a></li>
                     <li class="footerLinks"><a href="#!"><i class="mdi mdi-twitter"></i></a></li>
