--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,117 @@ nav {
     background-color: #969e16;
 }
 
+.modal h4, #loginFormHeader {
+    border-bottom: 1px solid #e4e4e4;
+    padding-bottom: 10px;
+    font-size: 25px;
+    color: #666;
+}
+
+#modal-close:hover {
+    color: #fa9609;
+}
+
+.input-field .prefix {
+    color: #c5c5c5;
+}
+
+.input-field .prefix.active {
+    color: #969e16;
+}
+
+.input-field label {
+    color: #c5c5c5;
+}
+
+.input-field input:focus + label {
+    color: #969e16 !important;
+}
+.input-field input:focus {
+    border-bottom: 1px solid #969e16 !important;
+    box-shadow: 0 1px 0 0 #969e16 !important;
+}
+
+.input-field input.valid {
+    border-bottom: 1px solid #969e16 !important;
+    box-shadow: 0 1px 0 0 #969e16 !important;
+}
+
+.input-field input.invalid {
+    border-bottom: 1px solid #fa9609 !important;
+    box-shadow: 0 1px 0 0 #fa9609 !important;
+}
+
+#login-button, button, #signupButton {
+    background-color: transparent;
+    border: 1px solid #a7b018;
+    color: #a7b018;
+    width: 100%;
+    box-shadow: none;
+}
+#login-button:hover, #signupButton:hover {
+    background-color: #969e16;
+    border: none;
+    color: #fff;
+    box-shadow: 2px 2px 3px #c5c5c5;
+}
+
+#login {
+    background-color: #fa9609;
+    width: 100%;
+}
+
+#login:hover {
+    background-color: #e28400;;
+}
+
+.modal .modal-footer {
+    color: #444;
+    text-align: center;
+}
+
+#signup-link:active {
+    color: #f00 !important;
+}
+
+#signup-link:hover {
+    color: #fa9609;
+}
+
+#logoContainer {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+}
+
+#signupFormLogo {
+    max-width: 200px;
+    max-height: 80px;
+}
+
+#signupForm {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #c5c5c5;
+    margin: 35px auto 0 auto;
+    padding: 5px 0 0 0;
+    width: 50%;
+}
+
+#signupFormFooter {
+    background-color: #efefef;
+    margin: 0;
+    /* padding: 0 0.75rem; */
+    padding-bottom: 30px;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+}
+
+#signupFormFooterRow {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
 .sidenav {
     background: linear-gradient(to bottom, #a7b018, #92d14f);
     width: 250px;
@@ -73,5 +184,10 @@ nav {
 @media (max-width: 768px) {
     .card-item {
         flex-basis: 100% !important;
+    }
+
+    #signupForm {
+        border-radius: 5px;
+        width: 85%;
     }
 }
