--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <header id="page-top">
-    <div class="bavbar-fixed">
+    <div id="navbar" class="bavbar-fixed">
         <nav>
             <div class="nav-wrapper container">
                 <a href="#!" class="brand-logo"><img id="logo" src="/img/logo.jpg" alt="Zubis Mart Logo"></a>
@@ -56,22 +56,69 @@
                     <li><a href="#">Phone &amp; Laptop Repairs</a></li>
                 </ul>
                 <ul class="hide-on-med-and-down right">
-                    {{!-- <li class="active"><a href="#"><i class="mdi mdi-home left"></i>Home</a></li> --}}
-                    <li><a href="#!" class="dropdown-trigger" data-target="store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
-                    <li><a href="#!" class="dropdown-trigger" data-target="services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
-                    <li><a href="#"><i class="mdi mdi-information-variant left"></i>About</a></li>
-                    <li><a href="#"><i class="mdi mdi-phone left"></i>Contact</a></li>
-                    <li><a href="#"><i class="mdi mdi-account-plus left"></i>Register</a></li>
+                    {{#if user}}
+                        <li class="active"><a href="#"><i class="mdi mdi-home left"></i>Home</a></li>
+                        <li><a href="#"><i class="mdi mdi-dashboard left"></i>Dashboard</a></li>
+                        <li><a href="#!" class="dropdown-trigger" data-target="store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
+                        <li><a href="#!" class="dropdown-trigger" data-target="services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
+                        <li><a href="#"><i class="mdi mdi-information-variant left"></i>About</a></li>
+                        <li><a href="#"><i class="mdi mdi-logout left"></i>Log out</a></li>
+                    {{else}}
+                        <li class="active"><a href="#"><i class="mdi mdi-home left"></i>Home</a></li>
+                        <li><a href="#!" class="dropdown-trigger" data-target="store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
+                        <li><a href="#!" class="dropdown-trigger" data-target="services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
+                        <li><a href="#"><i class="mdi mdi-information-variant left"></i>About</a></li>
+                        <li><a href="#loginModal" class="modal-trigger"><i class="mdi mdi-login left"></i>Login/Signup</a></li>
+                    {{/if}}
                 </ul>
             </div>
         </nav>
         <ul id="mobile-menu" class="sidenav">
-            <li class="active"><a href="#"><i class="mdi mdi-home left"></i>Home</a></li>
-            <li><a href="#!" class="dropdown-trigger" data-target="mobile-store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
-            <li><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
-            <li><a href="#"><i class="mdi mdi-information-variant left"></i>About</a></li>
-            <li><a href="#"><i class="mdi mdi-phone left"></i>Contact</a></li>
-            <li><a href="#"><i class="mdi mdi-account-plus left"></i>Register</a></li>
+            {{#if user}}
+                <li class="active"><a href="#"><i class="mdi mdi-home left"></i>Home</a></li>
+                <li><a href="#"><i class="mdi mdi-dashboard left"></i>Dashboard</a></li>
+                <li><a href="#!" class="dropdown-trigger" data-target="mobile-store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
+                <li><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
+                <li><a href="#"><i class="mdi mdi-information-variant left"></i>About</a></li>
+                <li><a href="#"><i class="mdi mdi-logout left"></i>Log out</a></li>
+            {{else}}
+                <li class="active"><a href="#"><i class="mdi mdi-home left"></i>Home</a></li>
+                <li><a href="#!" class="dropdown-trigger" data-target="mobile-store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
+                <li><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
+                <li><a href="#"><i class="mdi mdi-information-variant left"></i>About</a></li>
+                <li><a href="#loginModal" class="modal-trigger"><i class="mdi mdi-login left"></i>Login/Signup</a></li>
+            {{/if}}            
         </ul>
+    </div>
+    <div id="loginModal" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <h4>Login <i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
+            <form action="" novalidate>
+                <div class="row">
+                    <div class="col s12 input-field">
+                        <i class="mdi mdi-email-outline prefix"></i>
+                        <input type="text" name="email" id="email" autofocus>
+                        <label for="email">Email Address</label>
+                        <span class="helper-text" data-error="Please provide your email address"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 input-field">
+                        <i class="mdi mdi-lock-outline prefix"></i>
+                        <input type="password" name="password" id="password">
+                        <label for="password">Enter Password</label>
+                        <span class="helper-text" data-error="Please provide your password"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 input-field">
+                        <button id="login-button" class="button btn waves-effect waves-light" type="submit">Login</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <p>Don't have an account? <a href="/views/register.html" id="signup-link">Sign Up</a></p>
+        </div>
     </div>
 </header>
