--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -91,6 +91,9 @@
         </ul>
     </div>
     <div id="loginModal" class="modal modal-fixed-footer">
+        <div class="progress">
+            <div class="indeterminate"></div>
+        </div>
         <div class="modal-content">
             <h4>Login <i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
             <form action="" novalidate>
