--- a/public/views/register.html
+++ b/public/views/register.html
@@ -2,7 +2,10 @@
     <img id="signupFormLogo" class="center-align" src="/img/transparent-logo.png" alt="Zubis Mart Logo">
 </div>
 <div>
-    <form action="" id="signupForm">
+    <form action="" id="signupForm" name="signupForm">
+        <div id="signupLoader" class="progress">
+            <div class="indeterminate"></div>
+        </div>
         <h4 id="loginFormHeader" class="center">Create An Account</h4>
         <div class="row">
             <div class="col s12 l6 input-field">
@@ -15,15 +18,15 @@
                 <i class="mdi mdi-alphabetical prefix"></i>
                 <input type="text" name="lastName" id="lastName" class="validate">
                 <label for="lastName">Enter Last Name</label>
-               <span class="helper-text" data-error="Invalid Last Name!" data-success="Okay"></span>
-           </div>
+                <span class="helper-text" data-error="Invalid Last Name!" data-success="Okay"></span>
+            </div>
         </div>
         <div class="row">
             <div class="col s12 input-field">
                 <i class="mdi mdi-email-outline prefix"></i>
                 <input type="email" name="email" id="email" class="validate">
                 <label for="email">Enter Email Address</label>
-                <span class="helper-text" data-error="Invalid Email Address!" data-success="Okay"></span>
+                <span class="helper-text" data-error="Invalid Email Address!" data-success="Okay">Example: john@doe.com</span>
             </div>
         </div>
         <div class="row">
@@ -31,7 +34,7 @@
                 <i class="mdi mdi-phone prefix"></i>
                 <input type="text" name="phone" id="phone" class="validate">
                 <label for="phone">Enter Phone Number</label>
-                <span class="helper-text" data-error="Invalid Phone Number!" data-success="Okay"></span>
+                <span class="helper-text" data-error="Invalid Phone Number!" data-success="Okay">Example: 09026425337</span>
             </div>
         </div>
         <div class="row">
@@ -39,7 +42,7 @@
                 <i class="mdi mdi-lock-outline prefix"></i>
                 <input type="password" name="password" id="password" class="validate">
                 <label for="password">Enter Password</label>
-                <span class="helper-text" data-error="Invalid Password!" data-success="Okay"></span>
+                <span class="helper-text" data-error="Invalid Password! Password should be at least 8 characters long." data-success="Okay">Password should be at least 8 characters long.</span>
             </div>
         </div>
         <div class="row">
