--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -91,25 +91,26 @@
         </ul>
     </div>
     <div id="loginModal" class="modal modal-fixed-footer">
-        <div class="progress">
+        <div id="loginLoader" class="progress">
             <div class="indeterminate"></div>
         </div>
         <div class="modal-content">
             <h4>Login <i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
-            <form action="" novalidate>
+            <form id="loginForm" name="loginForm" novalidate>
                 <div class="row">
                     <div class="col s12 input-field">
                         <i class="mdi mdi-email-outline prefix"></i>
-                        <input type="text" name="email" id="email" autofocus>
-                        <label for="email">Email Address</label>
+                        <input type="text" name="loginEmail" id="loginEmail" autofocus>
+                        <label for="loginEmail">Email Address</label>
                         <span class="helper-text" data-error="Please provide your email address"></span>
+                        <span class="loginFormErrorMessage" id="loginEmailErrorMessage"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col s12 input-field">
                         <i class="mdi mdi-lock-outline prefix"></i>
-                        <input type="password" name="password" id="password">
-                        <label for="password">Enter Password</label>
+                        <input type="password" name="loginPassword" id="loginPassword">
+                        <label for="loginPassword">Enter Password</label>
                         <span class="helper-text" data-error="Please provide your password"></span>
                     </div>
                 </div>
