--- a/views/index.hbs
+++ b/views/index.hbs
@@ -202,7 +202,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img class="responsive-img" src="img/slide2.jpg" alt="Unsplashed background img 2"></div>
+            <div class="parallax"><img class="responsive-img" src="img/slide2.jpg" alt="Parallax Image 2"></div>
         </div>
     </section>
     <div id="signup-form-container">
@@ -268,8 +268,6 @@
             </form>
         </div>
     </div>
-    <div id="topButton" class="fixed-action-btn">
-        <a href="#page-top" class="z-depth-4 btn-floating fab" id="top"><i id="top-arrow" class="mdi mdi-chevron-up"></i></a>
-    </div>
+    {{> fab}}
 </main>
 {{> footer}}
