Added Sell Page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -188,7 +188,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img class="responsive-img" src="img/slide5.jpg" alt="Unsplashed background img 2"></div>
+            <div class="parallax"><img class="responsive-img" src="/img/slide5.jpg" alt="Unsplashed background img 2"></div>
         </div>
         <div id="about">
             <h5 class="sub-header">About Zubis Mart</h5>
@@ -202,7 +202,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img class="responsive-img" src="img/slide2.jpg" alt="Parallax Image 2"></div>
+            <div class="parallax"><img class="responsive-img" src="/img/slide2.jpg" alt="Parallax Image 2"></div>
         </div>
     </section>
     <div id="signup-form-container">
