--- a/views/index.hbs
+++ b/views/index.hbs
@@ -190,7 +190,7 @@
             </div>
             <div class="parallax"><img class="responsive-img" src="/img/slide5.jpg" alt="Unsplashed background img 2"></div>
         </div>
-        <div id="about">
+        <div class="scrollspy" id="about">
             <h5 class="sub-header">About Zubis Mart</h5>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime necessitatibus laboriosam quasi debitis doloribus repudiandae mollitia soluta fuga qui, eius delectus, quaerat cupiditate! Veritatis illo accusantium corporis recusandae id ipsam voluptas nobis possimus eius quia. A eos architecto perferendis consequatur laudantium quisquam, quos earum voluptate rerum tenetur accusantium rem assumenda!</p>
         </div>
