--- a/views/sell.hbs
+++ b/views/sell.hbs
@@ -120,6 +120,7 @@
                     <div id="signupFormFooter" class="col s12 input-field">
                         <p class="center">Already have an account?</p>
                         <a class="modal-trigger button btn waves-effect waves-light" data-target="loginModal" id="login">Login</a>
+                        <p class="center">Back to <a href="/">Home Page</a></p>
                     </div>
                 </div>
             </form>
