Added User dashboard page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -257,4 +257,12 @@ form .progress {
     nav .nav-wrapper {
         padding: 0;
     }
+
+    #left-section {
+        height: auto !important;
+    }
+
+    #right-section h5 {
+        display: none;
+    }
 }
